# LinuxCourseProject

./: AutotoolsREADME.md  LICENSE  Location.cpp  Movie.h  Parser.h  README.md  RequestManager.cpp  RequestManager.h  User.cpp  User.h  client  configure.ac  cronjob.sh  distREADME.md  moviesProjectDir.sh  nginx.conf  testcgi  testcgi.cpp  testrun.sh
Autotools1/: configure.ac
Autotools1/src/: Makefile.am
Autotools2/: README.md  configure.ac
Autotools2/src/: Makefile.am
SqliteTest/: README.md  clearDB.sh  initDB  initDB.c  initDB.sh  populateDB  populateDB.c  selectExample.c  startDB.sh  test.db
SqliteTest/Final/: Database.h  Location.cpp  Movie.cpp  RequestManager.cpp  RequestManager.h  compile.sh  database.cpp  database.db  database.h  dbTest  dbTest.cpp  initDB  output.json  testDB
SqliteTest/Final/db/: restoreDB.sh
SqliteTest/Final/src/: Database.cpp  Location.h  README.md  dbTest.cpp
VueMovies/: README.md  index.html  package.json
VueMovies/distDigitalOcean/: index.html  testStaticServer.md
VueMovies/src/: App.vue  main.js
VueMovies/src/components/: OrderMenu.vue  Test.vue  Users.vue
db/: database.db  initDB  initDB.c
distIPAPI/static/js/: app.ae560018b913ed242f53.js.map
distLocal/: index.html
distLocal/static/js/: app.df2b14284b8309344a40.js  (+2 more)
docs/: API.md  Autotools.md  Client.md  Installation.md  README.md  Running.md  Web.md
src/: Database.cpp  Database.h  Location.cpp  Location.h  Order.cpp  Order.h  RequestManager.cpp  RequestManager.h  compile.sh  dbTest.cpp  fcgi  fcgi.cpp  movies.conf  nginx.conf  run.sh
(+7 files in other folders)
